# throttled-py

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CHANGELOG.rst  CHANGELOG_EN.md  CHANGELOG_EN.rst  CONTRIBUTING.md  Dockerfile  README.md  README_EN.md  README_ZH.md  codecov.yml  pyproject.toml
.agents/skills/pre-release/: SKILL.md
.claude/skills/pre-release/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  release-drafter-config.yml
.github/instructions/: release.instructions.md  use-skills.instructions.md
.github/workflows/: code_quality.yml  release.yml  unittest.yml
docs/: requirements.txt
docs/basic/: readme.md
docs/source/: api.rst  conf.py  index.rst  installation.rst
docs/source/_static/: custom.css
docs/source/advance_usage/: hooks.rst  index.rst  store-configuration.rst
docs/source/contrib/: fastapi.rst  index.rst
docs/source/observability/: index.rst  opentelemetry.rst
docs/source/quickstart/: context-manager.rst  decorator.rst  function-call.rst  index.rst  quota-configuration.rst  specifying-algorithms.rst  store-backends.rst  wait-retry.rst
examples/asyncio/: quickstart_example.py
examples/basic/: api_example.py  context_example.py  decorator_example.py  memory_example.py  python_benchmark.py  quickstart_example.py  quota_example.py  redis_example.py  timeout_example.py  using_algorithm_example.py
examples/contrib/fastapi/: basic_example.py  custom_key_func_example.py  multi_route_example.py  remote_address_example.py
examples/quickstart/: custom_hook_example.py  function_call_example.py  hook_example.py  otel_hook_example.py  quickstart_example.py  quota_dsl_example.py  redis_cluster_example.py  redis_example.py  redis_sentinel_example.py  using_algorithm_example.py
examples/quickstart/async/: custom_hook_example.py  decorator_example.py  function_call_example.py  global_memory_example.py  hook_example.py  memory_example.py  otel_hook_example.py  quickstart_example.py  quota_dsl_example.py  redis_cluster_example.py  redis_example.py  redis_sentinel_example.py  wait_retry_example.py
tests/: conftest.py  test_hooks.py  test_quota.py  test_throttled.py  test_utils.py  utils.py
tests/asyncio/: conftest.py  test_hooks.py  test_hooks_concurrent.py  test_throttled.py
tests/asyncio/benchmarks/: test_throttled.py
tests/asyncio/contrib/fastapi/: conftest.py  test_limiter.py  test_store_unavailable.py
tests/asyncio/contrib/otel/: test_hook.py
tests/asyncio/rate_limiter/: test_fixed_window.py  test_gcra.py  test_leaking_bucket.py  test_rate_limiter.py  test_sliding_window.py  test_token_bucket.py
tests/asyncio/store/: test_store.py  unavailable.py
tests/benchmarks/: test_otel_hook.py  test_throttled.py
tests/contrib/otel/: __init__.py  test_otel_hook.py
tests/rate_limiter/: parametrizes.py  test_base.py  test_fixed_window.py  test_gcra.py  test_leaking_bucket.py  test_quota_parser.py  test_rate_limiter.py  test_sliding_window.py  test_token_bucket.py
tests/store/: parametrizes.py  test_memory.py  test_redis_pool.py  test_store.py  unavailable.py
throttled/: __init__.py  constants.py  exceptions.py  hooks.py  throttled.py  types.py  typing.py  utils.py
throttled/_throttled/: __init__.py  logic.py
throttled/asyncio/: __init__.py  hooks.py  throttled.py
throttled/asyncio/contrib/fastapi/: headers.py  keys.py  limiter.py  middleware.py
throttled/asyncio/contrib/otel/: __init__.py  hook.py
throttled/asyncio/rate_limiter/: __init__.py  base.py  fixed_window.py  gcra.py  leaking_bucket.py  sliding_window.py  token_bucket.py
throttled/asyncio/store/: __init__.py  base.py  memory.py  redis.py
throttled/contrib/: __init__.py
throttled/contrib/otel/: __init__.py  hook.py
throttled/rate_limiter/: __init__.py  base.py  fixed_window.py  gcra.py  leaking_bucket.py  quota_parser.py  sliding_window.py  token_bucket.py
throttled/rate_limiter/lua/: sliding_window.lua
throttled/rate_limter/: __init__.py  base.py  fixed_window.py  gcra.py  sliding_window.py  token_bucket.py
throttled/rate_limter/lua/: fixed_window.lua  token_bucket.lua
throttled/store/: __init__.py  _wrapping.py  base.py  memory.py  redis.py  redis_pool.py  wraps.py
